@@ -1813,7 +1813,17 @@ static SyscallTableEntry syscall_table[] = {
 //   LINX_(__NR_setns,             sys_ni_syscall),       // 346
    LINXY(__NR_process_vm_readv,  sys_process_vm_readv), // 347
    LINX_(__NR_process_vm_writev, sys_process_vm_writev),// 348
-   LINX_(__NR_kcmp,              sys_kcmp)              // 349
+   LINX_(__NR_kcmp,              sys_kcmp),             // 349
+
+//   LIN__(__NR_finit_module,      sys_ni_syscall),       // 350
+//   LIN__(__NR_sched_setattr,     sys_ni_syscall),       // 351
+//   LIN__(__NR_sched_getattr,     sys_ni_syscall),       // 352
+//   LIN__(__NR_renameat2,         sys_ni_syscall),       // 353
+//   LIN__(__NR_seccomp,           sys_ni_syscall),       // 354
+
+   LINXY(__NR_getrandom,         sys_getrandom)         // 355
+//   LIN__(__NR_memfd_create,      sys_ni_syscall),       // 356
+//   LIN__(__NR_bpf,               sys_ni_syscall)        // 357
 };
 
 SyscallTableEntry* ML_(get_linux_syscall_entry) ( UInt sysno )
