@@ -67,6 +67,7 @@ where XXXXXX is the bug number as listed below.
 340509  arm64: unhandled instruction fcvtas
 340630  arm64: fchmod (52) and fchown (55) syscalls not recognized
 340632  arm64: unhandled instruction fcvtas
+340788  warning: unhandled syscall: 318 (getrandom)
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
 n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
